# BotanicalTreeReconstruction

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py  test_toolkit.py
configs/: examples.py
demo_project/: README.md  workflow_demo.py
demo_project/configs/: basic.yaml
examples/: basic_workflow.py
extra/: run_test.sh  visualize_ray_only.py
models/: model.pth
outputs/: pipeline_summary_1911_1611.json
scripts/: README.md  add_points_with_rays.py  colmap_reconstruction.py  downsample_colmap.py  filter_colmap_with_masks.py  main_pipeline.py  mask_based_filtering.py  pipeline_visualization.py  ray_based_enhancement.py  run_pipeline.py  run_pipeline.sh  run_pipeline_configs.sh  segmentation_inference.py  visualize_results.py
src/tree_reconstruction/: __init__.py  cli.py  colmap_pipeline.py  config.py  filtering.py  pycolmap_pipeline.py  removepoints.py  segmentation.py  train.py  visualization.py
tests/: test_data.py
